test/tests/errors/error-procedure-call.sm
// true
// false
// false
/**/
/**/

program {
    const a: int = 6;
    a(4);
}